	  - Some slight changes to debug message(s) when removing/renaming an object.

	Schema changes
	API changes
	  - Remove the redundant pql_get_uid() function. It didn't work in the first
	    place, and I find it cleaner to use the pql_get_attribute().
	  - Remove all hardcoded 'ou=DNS' with propper pql_get_define()'s.
	    Closes: #304

	Misc changes
	  - Add useSimScan to the list of attributes that 'users' need read access to.
	  - When debugging the pql_config.inc:pql_set_define() function, only output
	    debugging if: File .DEBUG_DEFINES exists _AND_ it's a '_CONF_' define
	    (i.e. ignore any _ATTR_ definition).
	  - Rewrite the part that goes through the $PQL_ATTRIBUTE array and sets
	    config and attribute defines. Should be a little easier to follow now...

phpQLAdmin 2.3.2 Release (Mar 11 2006)
	Bug fixes
	GUI layout changes
	  - Allow for picture to be added to user.
	    Closes: #72
	  - Add a 'Allow all chars in passwds' to the branch configuration page
	    (and check this new value whenever we verify the password).
	    Closes: #262
	  - Fix group management code. Patch by Aaron Collins.

	Schema changes
	  - Add attribute to specify if autogenerate uidNumber and gidNumber.
	    1.3.6.1.4.1.8767.3.2.1.26 => 'autoCreateUGidNumber'

	API changes
	  - Option to specify in the user template(s) whether to autogenerate uid- and
	    gid numbers or if to use the 'virtual user' within QmailLDAP.

	Misc changes
	  - Include a working Apache/mod_ldap_cfg config snippet and database branch example.
	  - Update the Apache readme (doc/README.apache) with the new Apache/mod_ldap_cfg
	    demo files.
	  - To stop PHP warnings when running with 'error_reporting=E_NOTICE':
	    + Make sure variables are initialized before use.
	    + Use 'counter < count(array)' in for loop instead of 'array[counter]'.
	    + Use 'if(empty(array))' instead of 'if(!array[part])' or 'if(!isset(array[part]))'.
	    + Use '@array[part]' instead of 'array[part]'.