@@ -1,6 +1,6 @@
 <?php
 // configuration file
-// $Id: config.inc.CHANGE_ME,v 2.71 2006-07-08 10:29:36 turbo Exp $
+// $Id: config.inc.CHANGE_ME,v 2.72 2006-07-08 14:36:48 turbo Exp $
 //
 // IMPORTANT:
 // If adding or removing defines from this file,
@@ -93,6 +93,11 @@ pql_set_define("PQL_CONF_USE_TLS", false);
 // PQL_CONF_SUBTREE_BIND9
 // Below what sub-DN is your DNS information stored?
 //pql_set_define("PQL_CONF_SUBTREE_BIND9", "ou=DNS");
+
+// ----------------------------
+// PQL_CONF_SUBTREE_APACHE
+// Below what sub-DN is your Apache information stored?
+//pql_set_define("PQL_CONF_SUBTREE_APACHE", "ou=WEB");
 
 // ----------------------------
 // mail(message)store generation
